# cpmsdlexample

./: CMakeLists.txt  main.c
